hphp/hack/test/typecheck/const_attribute/usage/superclass_not_const.php.exp
ERROR: File "superclass_not_const.php", line 5, characters 1-32:
Classes, interfaces, traits and enums may not be declared `__Const` (Parsing[1002])
ERROR: File "superclass_not_const.php", line 6, characters 7-7:
A `__Const` class may only extend other `__Const` classes (Typing[4197])
